# WhoIsApi

./: .gitignore  Dockerfile  README.md  nixpacks.toml  pyproject.toml  requirements.txt  vercel.json
.github/workflows/: docker.yml  test.yml
bruno/: Who Is.bru  bruno.json
tests/: test_whois_api.py
whoisapi/: app.py  main.py
whoisapi/static/: script.js  style.css
whoisapi/templates/: index.html
